########### 2015-6-4 #################

alter table flashsale_tongji_shopping add column status int(11) NOT NULL;
########### 2015-6-3 #################
ALTER TABLE suplychain_flashsale_orderlist  MODIFY COLUMN updated datetime;
ALTER TABLE suplychain_flashsale_orderdetail  MODIFY COLUMN created datetime;
ALTER TABLE suplychain_flashsale_orderdetail  MODIFY COLUMN updated datetime;

########### 2015-6-2 #################
alter table suplychain_flashsale_orderdetail add column non_arrival_quantity int(11) not Null after arrival_quantity;
alter table suplychain_flashsale_orderdetail add column inferior_quantity int(11) not Null after non_arrival_quantity;

########### 2015-5-27 #################
alter table shop_weixin_product add column created datetime NOT NULL;
alter table shop_weixin_product add column modified datetime NOT NULL;

alter table shop_weixin_productsku add column created datetime NOT NULL;
alter table shop_weixin_productsku add column modified datetime NOT NULL;
########### 2015-5-26  #################
alter table shop_items_product add column is_verify tinyint NOT NULL;
alter table shop_items_product add column shelf_status int(11) NOT NULL;
########### 2015-5-14  #################
alter table xiaolumm_carrylog add column log_type varchar(8) NOT NULL;
alter table xiaolumm_carrylog add column carry_type varchar(8) NOT NULL;

update xiaolumm_carrylog set status='confirmed',log_type='refund',carry_type='in' where status='confirmed';
update xiaolumm_carrylog set status='confirmed',log_type='buy',carry_type='out' where status='consumed';

alter table flashsale_tongji_shopping_day add column buyercount int(11) NOT NULL;
alter table flashsale_tongji_shopping add column wxordernick varchar(32) NOT NULL;
########### 2015-5-7  #################
ALTER TABLE `shop_weixin_user` ADD INDEX shop_weixin_user_vmobile(vmobile);
########### 2015-5-5  #################
alter table shop_items_productsku add column lock_num int(11) NOT NULL;