@@ -104,6 +104,7 @@ class SaleRefund(models.Model):
         unique_together = ("trade_id","order_id")
         verbose_name=u'特卖/退款单'
         verbose_name_plural = u'特卖/退款单列表'
+        permissions = [("sale_refund_manage", u"特卖订单退款管理"),]
         
     def __unicode__(self):
         return '<%s>'%(self.id)
