@@ -17,8 +17,6 @@
 
 
 {% block container %}
-
-
 <h3>数据统计</h3>
 
 <div class="row">
