@@ -1,0 +1,30 @@
+{% extends "mama_base.html" %}
+
+{% block title %} 小鹿妈妈-申请成功 {% endblock %}
+
+{% block head_script %}
+<link href='{{ STATIC_URL }}jquery/jquery-ui-1.10.1.css' rel='stylesheet'  />    
+
+<style type="text/css" >
+    tfoot input{
+        width:50%;
+    }
+</style>
+{% endblock %}
+
+
+{% block container %}
+
+<ul class="nav nav-tabs">
+  <li role="presentation" ><a href="#">填写资料</a></li>
+  <li role="presentation" ><a href="#">支付押金</a></li>
+  <li role="presentation" class="active"><a href="#">申请成功</a></li>
+</ul>
+
+<form>
+  <div class="well well-large">
+  <span>恭喜{{ name }}，您已成功申请小鹿妈妈，请添加管理员：，并通知管理员尽快审核您的信息。管理员审核通过后，您将正式成为小鹿妈妈代言人，获得订单佣金点击提成权限。</span>
+  </div>
+  <button type="submit" class="btn btn-default">进入妈妈专属页面</button>
+</form>
+{% endblock %}
