@@ -1,3 +1,7 @@
+########### 2015-6-5 #################
+ALTER TABLE django_admin_log ADD INDEX IDX_USER_ID_CONTENT_TYPE_ID (USER_ID,CONTENT_TYPE_ID);
+CREATE INDEX `shop_trades_mergetrade_6bac1c39` ON `shop_trades_mergetrade` (`receiver_phone`);
+ CREATE INDEX `shop_trades_mergetrade_4508aeb0` ON `shop_trades_mergetrade` (`weight_time`);
 ########### 2015-6-4 #################
 
 alter table flashsale_tongji_shopping add column status int(11) NOT NULL;
